--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.3.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "python-shell": "^1.0.8"
+    "python-shell": "^1.0.8",
+    "request": "^2.88.0"
   }
 }
